--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,246 @@
-* {
+*,
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	list-style: none;
 	text-decoration: none;
 }
-body {
+.links {
 	margin: 0 7rem;
+}
+.links {
+	float: left;
+}
+.top-nav li {
+	display: inline;
+}
+
+.phone-email {
+	float: right;
+}
+.top-nav::after {
+	content: "";
+	clear: both;
+	display: block;
+}
+header {
+	display: flex;
+	justify-content: space-evenly;
+}
+.header-links {
+	display: flex;
+	justify-content: center;
+}
+.header-links a {
+	padding: 2.5rem;
+	color: #000000;
+}
+.header-links a:first-child {
+	background-color: #bdf359;
+}
+.header-links a:hover,
+.header-links select:hover {
+	background-color: #bdf359;
+}
+.header-bg img {
+	max-width: 15rem;
+}
+
+main {
+	height: 50vh;
+	background-color: #181818;
+	color: #ffffff;
+	display: flex;
+	padding: 3.5rem 7rem;
+}
+.card1 {
+	background-color: rgb(165, 37, 37);
+	margin-right: 3rem;
+	text-align: center;
+}
+
+.card1-head,
+.card2-head,
+.card3-head {
+	padding: 1rem;
+}
+.card1-body {
+	padding: 2rem;
+	word-spacing: 2rem;
+	line-height: 1.25;
+}
+.card2-body,
+.card3-body {
+	padding: 1.3rem;
+	word-spacing: 2rem;
+	line-height: 1.25;
+}
+
+.card1-rd,
+.card2-rd,
+.card3-rd {
+	margin: 4rem 0;
+	padding: 1.5rem;
+	background-color: #bdf359;
+}
+.card2 {
+	background-color: rgb(48, 165, 37);
+	margin-right: 3rem;
+	text-align: center;
+}
+
+.card3 {
+	background-color: rgb(82, 37, 165);
+	text-align: center;
+}
+
+.sect-1 {
+	display: flex;
+	margin: 4rem 7rem 0;
+	height: 45vh;
+	justify-content: space-between;
+}
+
+.sect-1-col1card {
+	margin-top: 2rem;
+	background-color: #000000;
+	height: 30vh;
+	color: #ffffff;
+}
+.sect1-innerdiv {
+	padding: 11.5rem 0;
+	text-align: center;
+}
+.sect1-innerdiv a {
+	margin-top: 1rem;
+	padding: 0.35rem 0.5rem;
+	background-color: #ffffff;
+	display: inline-block;
+}
+
+.sect1-innerdiv a:hover {
+	background-color: #bdf359;
+	color: #ffffff;
+}
+.sect-1-col2-part1 {
+	margin-top: 2rem;
+	display: flex;
+	border-bottom: 2px solid black;
+}
+
+.sect-1-col2-part2 {
+	margin-top: 1rem;
+	display: flex;
+	border-bottom: 2px solid black;
+}
+
+.sect-1-col2-part3 {
+	display: flex;
+	margin-top: 1rem;
+}
+.part1-col1,
+.part2-col1,
+.part3-col1 {
+	display: inline-block;
+	margin-right: 3rem;
+	margin-bottom: 1rem;
+}
+.part1-col2 a,
+.part2-col2 a,
+.part3-col2 a {
+	margin-top: 1rem;
+	padding: 0.35rem 0.5rem;
+	background-color: #000000;
+	display: inline-block;
+	color: rgb(255, 255, 255);
+}
+
+.part1-col2 a:hover {
+	background-color: #bdf359;
+	color: #000000;
+}
+.sect-2 {
+	background-color: #d3d3d3;
+	padding: 2.5rem 0 1rem;
+}
+.sect-2 h2,
+.sect-2 p {
+	text-align: center;
+}
+.sect-2flex {
+	display: flex;
+	margin: 2rem 7rem;
+	justify-content: space-between;
+}
+.sect-2-col1,
+.sect-2-col2 {
+	display: flex;
+}
+
+.sect-2-col-img {
+	background-color: #000000;
+	width: 15rem;
+	height: 8rem;
+	display: inline-block;
+	color: #ffffff;
+}
+.sect-2-coltxt {
+	background-color: #ffa600;
+	padding: 1rem;
+	color: #ffffff;
+}
+.sect-2-coltxt button {
+	margin: 2rem 0 0;
+	background-color: #bdf359;
+	color: #ffffff;
+	padding: 0.5rem 1rem;
+}
+.sect-3 {
+	background-color: #222121;
+	display: flex;
+	color: rgb(255, 253, 253);
+}
+
+.sect-3-col-1,
+.sect-3-col-2,
+.sect-3-col-3 {
+	margin: 2rem 7rem;
+	width: 33.333333%;
+}
+.sect-3 h3 {
+	border-bottom: 2px solid rgb(0, 0, 0);
+	padding-bottom: 1.2rem;
+}
+.sect-3-col-1 > p {
+	padding: 2rem 0;
+}
+
+.sect-3-col-2-links {
+	padding-top: 1rem;
+	color: #bdf359;
+}
+
+.sect-3-col-3 form {
+	padding: 1.75rem 0 0;
+}
+.sect-3-col-3 button {
+	margin: 1rem 0 2rem;
+	background-color: #bdf359;
+	color: #ffffff;
+	padding: 0.5rem 1rem;
+}
+.sect-3-col-3 .sect-3-social {
+	padding: 1rem 0 0;
+}
+
+.top-nav,
+footer {
+	background: #000000;
+	color: rgb(255, 253, 253);
+}
+footer p {
+	margin: 0 7rem;
+	padding: 1.25rem 0;
 }
