--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,9 @@
 }
 .links {
 	margin: 0 7rem;
-}
-.links {
 	float: left;
 }
+
 .top-nav li {
 	display: inline;
 }
@@ -49,7 +48,6 @@ header {
 }
 
 main {
-	height: 50vh;
 	background-color: #181818;
 	color: #ffffff;
 	display: flex;
@@ -99,14 +97,13 @@ main {
 .sect-1 {
 	display: flex;
 	margin: 4rem 7rem 0;
-	height: 45vh;
 	justify-content: space-between;
+	padding: 0 0 5rem 0;
 }
 
 .sect-1-col1card {
 	margin-top: 2rem;
 	background-color: #000000;
-	height: 30vh;
 	color: #ffffff;
 }
 .sect1-innerdiv {
@@ -243,4 +240,273 @@ footer {
 footer p {
 	margin: 0 7rem;
 	padding: 1.25rem 0;
+}
+
+@media (max-width: 769px) {
+	.sect-3-col-1,
+	.sect-3-col-2,
+	.sect-3-col-3 {
+		margin: 2rem 0;
+		width: 100%;
+		text-align: center;
+	}
+
+	.sect-2-col1,
+	.sect-2-col2 {
+		width: 50%;
+	}
+}
+@media (max-width: 576px) {
+	.links {
+		margin: 0;
+		padding: 1rem 0;
+		text-align: center;
+		float: none;
+	}
+
+	.top-nav li {
+		display: block;
+	}
+
+	.phone-email {
+		float: none;
+	}
+	header {
+		display: block;
+	}
+	.header-links {
+		display: block;
+	}
+	.header-links a {
+		padding: 0;
+		color: #000000;
+		display: block;
+		text-align: center;
+	}
+	.header-links a:last-child {
+		padding: 0.25rem 0 0;
+		background-color: #bdf359;
+		padding: 0.35rem 0.25rem;
+	}
+	.header-links a:hover {
+		background-color: #bdf359;
+	}
+	.header-links select:hover {
+		background-color: #68f808;
+		color: #ffffff;
+	}
+	.header-links select {
+		width: 100%;
+	}
+	.header-bg img {
+		max-width: 25vh;
+	}
+	main {
+		background-color: #181818;
+		color: #ffffff;
+		display: block;
+		padding: 0;
+	}
+	main p {
+		padding: 0.5rem;
+	}
+	.card1 {
+		background-color: rgb(165, 37, 37);
+		margin-right: 0;
+		text-align: center;
+	}
+	.card2 {
+		background-color: rgb(48, 165, 37);
+		margin-right: 0;
+		text-align: center;
+	}
+
+	.card3 {
+		background-color: rgb(82, 37, 165);
+		text-align: center;
+	}
+
+	.card1-head,
+	.card2-head,
+	.card3-head {
+		padding: 1rem 0;
+	}
+	.card1-body,
+	.card2-body,
+	.card3-body {
+		padding: 0;
+		word-spacing: normal;
+		line-height: normal;
+	}
+	.card3-body {
+		padding: 1rem 0;
+	}
+
+	.card1-rd,
+	.card2-rd,
+	.card3-rd {
+		margin: 0;
+		padding: 0;
+		background-color: #bdf359;
+		width: 100%;
+	}
+
+	.sect-1 {
+		display: block;
+		margin: 0;
+		text-align: center;
+		padding: 1rem 0;
+	}
+	.sect-1-col1 h3 {
+		padding: 1rem 0;
+	}
+	.sect-1-col1card {
+		margin-top: 0;
+		background-color: #000000;
+		color: #ffffff;
+	}
+	.sect-1 img {
+		display: block;
+		max-width: 100%;
+	}
+	.sect1-innerdiv {
+		padding: 1rem;
+		text-align: center;
+	}
+	.sect1-innerdiv a {
+		margin-top: 1rem;
+		padding: 0.35rem 0.5rem;
+		color: #000000;
+		font-size: large;
+		background-color: #ffffff;
+		display: block;
+	}
+	.sect1-innerdiv a:hover {
+		background-color: #bdf359;
+		color: #ffffff;
+	}
+
+	.sect-1-col2-part1 {
+		margin: 0 0 1rem 0;
+		display: block;
+		border-bottom: none;
+	}
+	.sect-1-col2 h3 {
+		padding: 1rem 0;
+	}
+	.sect-1-col2 img {
+		display: inline-block;
+		padding: 0;
+	}
+
+	.part1-col2 span,
+	.part2-col2,
+	.part3-col2 {
+		display: block;
+		padding: 0.25rem 0;
+	}
+
+	.part1-col1,
+	.part2-col1,
+	.part3-col1 {
+		display: block;
+		margin-right: 0;
+		margin-bottom: 0;
+	}
+
+	.part3-col1 {
+		padding-top: 0.8rem;
+	}
+	.part1-col2 a:hover {
+		background-color: #bdf359;
+		color: #000000;
+	}
+
+	.sect-1-col2-part2 {
+		margin-top: 0;
+		display: block;
+		border-bottom: none;
+	}
+	.sect-1-col2-part3 {
+		display: block;
+		margin-top: 0;
+	}
+
+	.part1-col2 a,
+	.part2-col2 a,
+	.part3-col2 a {
+		margin-top: 1rem;
+		padding: 0.35rem 0.5rem;
+		background-color: #000000;
+		display: block;
+		color: rgb(255, 255, 255);
+	}
+
+	.sect-2 {
+		background-color: #d3d3d3;
+		padding: 0;
+		text-align: center;
+	}
+	.sect-2flex {
+		display: block;
+		margin: 0;
+	}
+	.sect-2-col1,
+	.sect-2-col2 {
+		display: block;
+	}
+
+	.sect-2-col-img {
+		background-color: #000000;
+		width: 100%;
+		display: block;
+		color: #ffffff;
+	}
+	.sect-2-col1,
+	.sect-2-col2 {
+		width: 100%;
+	}
+
+	.sect-3 {
+		background-color: #222121;
+		display: block;
+		color: rgb(255, 253, 253);
+	}
+
+	.sect-3-col-1,
+	.sect-3-col-2,
+	.sect-3-col-3 {
+		margin: 0;
+		width: 100%;
+		text-align: center;
+	}
+
+	.sect-3 h3 {
+		border-bottom: 2px solid rgb(0, 0, 0);
+		padding: 3rem 0 1rem;
+	}
+	.sect-3-col-1 > p {
+		padding: 2rem 0;
+	}
+
+	.sect-3-col-2-links {
+		padding-top: 1rem;
+		color: #bdf359;
+	}
+
+	.sect-3-col-3 form {
+		padding: 1.75rem 0 0;
+	}
+	.sect-3-col-3 button {
+		margin: 1rem 0 2rem;
+		background-color: #bdf359;
+		color: #ffffff;
+		padding: 0.5rem 1rem;
+	}
+	.sect-3-col-3 .sect-3-social {
+		padding: 1rem 0;
+	}
+	footer {
+		font-size: small;
+	}
 }
